@@ -18,8 +18,8 @@
 #  $xappylibdir: a checkout of xappy/trunk.
 
 rev="1.1.3"
-trunk_rev="13686"
-matchspy_branchpoint="13686"
+trunk_rev="13711"
+matchspy_branchpoint="13688"
 clustering_branchpoint="13638"
 geospatial_branchpoint="13638"
 coloursim_branchpoint="13348"
